Added the methods for updating and deleting user.
