# src/controllers/userControllers.ts
@@ -21,12 +21,13 @@ export const findAll = async (req: Request, res: Response): Promise<void> => {
     console.log(UserModel)
     const data = await UserModel.find({}).sort({ lastName: 1 });
     if (!data || data.length === 0) {
-      // BACKEND Success OUTPUT   
+      // BACKEND Failure OUTPUT   
       res.status(404).send({ 
         message: 'No users found! There are either no users yet, or their was an error retrieving them.'
       }); 
       return;
     } else {
+      // BACKEND Success OUTPUT 
       res.status(200).send(data); // Send the newly ordered data  
       }
   } catch(err: unknown) {
@@ -101,6 +102,113 @@ export const create = async (req: Request, res: Response) => {
       // BACKEND Failure OUTPUT 
       res.status(400).json({ message: 'An unknown error occurred' });
     }
+  }
+};
+
+// #2 the "Put" METHOD for updating a USER selected by userId
+export const update = async (req: Request, res: Response): Promise<void> => {
+  /* #swagger.summary = "UPDATES a user that has been selected by _id with any new data entered" */   
+    /* #swagger.description = 'The changed data for the user updates the database' */      
+    // #swagger.responses[204] = { description: 'SUCCESS (with no content returned), PUT updated the selected user in the database' }
+    // #swagger.responses[400] = { description: 'BAD REQUEST your PUT was attempted with forbidden entries'}
+    // #swagger.responses[404] = { description: 'The attempted PUT of the specified user for updating was Not Found'}
+    // #swagger.responses[412] = { description: 'The PRECONDITION FAILED in the validation of the user data'}
+    // #swagger.responses[500] = { description: 'There was an INTERNAL SERVER ERROR while trying to PUT the data change'}  
+  if (!req.body) {
+    // BACKEND Failure OUTPUT 
+    res.status(400).send({
+      message: 'Data to update can not be empty!',
+    });
+    return;
+  }
+  /* #swagger.parameters['userId'] = {
+         in: 'path',
+         description: 'Unique identifier for the user',
+         required: true,
+         type: 'string'
+     } */
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Fields to update',
+        required: true,
+         '@schema': {
+          "type": "object",
+          "properties": { 
+            "name": {
+              "type": "string",
+              "example": "Updated Name"
+            },      
+            "email": {
+              "type": "string",
+              "example": "Updated@email"
+            },
+            "password": {
+              "type": "string",
+              "example": "password123"
+            }            
+          },
+          "required": "email"
+        }
+      }
+    }
+  */
+  const userId: string = req.params.userId;
+  try {
+    const data = await UserModel.findOneAndUpdate(
+      { _id: userId }, 
+      req.body, 
+      { new: true, useFindAndModify: false }
+    );
+   if (!data) {
+    // BACKEND Failure OUTPUT 
+      res.status(404).send({
+        message: `Cannot update user with userId=${userId}. This userId was not found!`,
+      });
+      return;
+    } else {
+      // BACKEND Success OUTPUT 
+      res.status(204).send({ message: 'User was updated successfully.' });
+      return;
+    } 
+  } catch (err) {
+    console.error(err);
+    // BACKEND Failure OUTPUT 
+    res.status(500).send({
+      message: `Error updating user with userId=${userId}`,
+    });
+    return;
+  }
+};
+
+// The "Delete" METHOD for removing a USER selected by userId
+export const deleteUser = async (req: Request, res: Response): Promise<void> => {
+  /* #swagger.summary = "DELETES a user by its _id" */ 
+    /* #swagger.description = 'With deletion it's permanently removed from the database.' */
+    // #swagger.responses[200] = { description: 'SUCCESS, the user was DELETED' }   
+    // #swagger.responses[404] = { description: 'The selected user for DELETION was NOT FOUND'}
+    // #swagger.responses[412] = { description: 'The PRECONDITION FAILED in the validation of the _id PARAMETER'}
+    // #swagger.responses[500] = { description: 'There was an INTERNAL SERVER ERROR while trying to DELETE the user'} 
+  const userId: string = req.params.userId; 
+  try {
+    const data = await UserModel.findOneAndDelete({ _id: userId }) 
+    if (!data) {
+      // BACKEND Failure OUTPUT 
+      res.status(404).send({
+        message: `Cannot delete user with userId=${userId}. This userId was not found!`,
+      });
+      return;
+    } else {
+      // BACKEND Success OUTPUT 
+      res.send({
+        message: 'User was deleted successfully!',
+      });
+      return;
+      } 
+  } catch(err) {
+    // BACKEND Failure OUTPUT 
+    res.status(500).send({
+      message: 'Deletion error. Could not delete user with userId=' + userId,
+    });
   }
 };
 // END Basic CRUD Operation Methods #######################################################################################/
